--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "author": "zeinkap",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.1.0",
-    "ejs": "^2.7.1",
+    "axios": "^0.21.0",
+    "dotenv": "^8.2.0",
+    "ejs": "^2.7.4",
     "express": "^4.17.1",
-    "nodemon": "^1.19.3",
-    "request": "^2.88.0"
+    "node-fetch": "^2.6.1",
+    "nodemon": "^1.19.4",
+    "request": "^2.88.2"
   }
 }
